test_suite/ui/literal_out_of_range.stderr
error: Integer literal out of range
 --> $DIR/literal_out_of_range.rs:4:17
  |
4 |     BigNumber = 0xdeadbeefcafebabe1337,
  |                 ^^^^^^^^^^^^^^^^^^^^^^
