test_suite/ui/literal_out_of_range.rs
#[enumflags2::bitflags]
#[derive(Copy, Clone)]
enum Foo {
    BigNumber = 0xdeadbeefcafebabe1337,
}

fn main() {}
